# zumar

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/zumar-cli/: Cargo.toml
crates/zumar-cli/src/: main.rs
crates/zumar-core/: Cargo.toml
crates/zumar-core/examples/: diff_bench.rs
crates/zumar-core/src/: diff.rs  lib.rs  patch.rs  vdom.rs
crates/zumar-core/tests/: diff_apply.rs
crates/zumar-lang/: Cargo.toml
crates/zumar-lang/src/: ast.rs  check.rs  gen.rs  lex.rs  lib.rs  parse.rs
crates/zumar-runtime/: Cargo.toml
crates/zumar-runtime/examples/: wire_bench.rs
crates/zumar-runtime/src/: effects.rs  lib.rs  wire.rs
crates/zumar-wasmgc/: Cargo.toml
crates/zumar-wasmgc/src/: lib.rs
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/counter/www/: index.html  zumar.js
examples/effects/: Cargo.toml
examples/effects/src/: lib.rs
examples/effects/www/: index.html  quote.txt
examples/lang-clock/: clock.zu  test.mjs
examples/lang-clock/www/: gc.html  index.html  quote.txt  zumar-gc.js
examples/lang-counter/: counter.zu
examples/lang-counter/app/: Cargo.toml
examples/lang-counter/app/src/: lib.rs
examples/lang-counter/www/: index.html
examples/lang-expenses/: expenses.zu
examples/lang-expenses/www/: index.html  zumar-wire.js
examples/lang-hello/: hello.zu
examples/lang-hello/www/: index.html
examples/lang-kanban/: kanban.zu
examples/lang-kanban/www/: gc.html  index.html
examples/lang-queue/: queue.zu
examples/lang-queue/www/: index.html
examples/lang-todo/: todo.zu
examples/lang-todo/app/: Cargo.toml
examples/lang-todo/app/src/: lib.rs
examples/lang-todo/www/: gc.html  index.html
examples/todo/: Cargo.toml
examples/todo/src/: lib.rs
examples/todo/www/: index.html  zumar.js
spikes/sutegi-zumar/: Cargo.toml  FINDINGS.md  browser-test.mjs  run.mjs
spikes/sutegi-zumar/src/: counter.rs  frame.rs  main.rs
spikes/sutegi-zumar/www/: index.html
spikes/wasmgc/: FINDINGS.md  counter.wat  run-clock.mjs  run-emitted.mjs  run-hello.mjs  run-kanban.mjs  run-remaining.mjs  run-todo.mjs  run.mjs  toggle.zu
www/: test-guards.mjs  zumar-gc.js  zumar-live.js  zumar-wire.js  zumar.js
