[workspace]
resolver = "2"
members = [
    "crates/zumar-core",
    "crates/zumar-lang",
    "crates/zumar-runtime",
    "examples/counter",
    "examples/todo",
    "examples/effects",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
