[package]
name = "zumar-runtime"
description = "The Elm-architecture program loop: model, update, view, dispatch. Still wasm-free."
edition.workspace = true
version.workspace = true

[dependencies]
zumar-core = { path = "../zumar-core" }
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "zumar-core/serde"]

[dev-dependencies]
serde_json = { workspace = true }

[[example]]
name = "wire_bench"
required-features = ["serde"]
