[package]
name = "todo"
description = "zumar todo example — keyed lists, controlled input, form submit, checkboxes."
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zumar-core = { path = "../../crates/zumar-core" }
zumar-runtime = { path = "../../crates/zumar-runtime" }
wasm-bindgen = "0.2"
serde_json = { workspace = true }
