[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zumar-core = { path = "/Users/enekosarasola/eneko_projects/zumar/crates/zumar-core" }
zumar-runtime = { path = "/Users/enekosarasola/eneko_projects/zumar/crates/zumar-runtime" }
wasm-bindgen = "0.2"

[workspace]
